# JSON

./: CMakeLists.txt  Makefile  data.json  main.cpp  main.h  text.txt
parser/: parser.cpp  parser.h
tokenizer/: brace_bracket_tokenization.cpp  brace_tokenization.cpp  comma_colon_tokenization.cpp  eof_invalid_tokenization.cpp  number_tokenization.cpp  string_tokenization.cpp  tokenizer.cpp  tokenizer.h  tr_fls_null_tokenization.cpp  tr_fls_tokenization.cpp
